Shipbuilder (#278)
* shipbuilder concept

* shipbuilder slots working with drag/drop

* basic shipmodules

* change all 56% modifiers to 55%

* more shipbuilder changes and styling

* Add FSD Booster and initial stats component

* add jlink compression

* add jumpstats

* upgrade to HorizonsNumberModifierValue

* remove logback message at first line

* all ships added

* resistances and more stuff

* add ship images and persistence

* add all modules, add mounting/origin images

* testcases, pre-engineered stuff, design/icons

* Replace doubles with BD

* bunch of stuff from the todo list

* add powered state
auto resize modules
limit size to slot

* totals and fixes

* new stats design and fixes

* fix tests/bugs

* update compress

* cleanup (remove comments)

* updated ship overview
updated all button texts/icons for modules
disabled options for current ship
recharge (unit): m/s -> s
corrected tooltip for overpower value

* add loadout.json test events

* shiptype in dropdown

* updates to UI
live stats for current ship
loading screen
sortable ships table
log rotation

* small layout fixes
disable debug logging

* layout fixes
shield reorder and remove raw from RES
pipselect autoscale
support passenger in jump weight and config

* fix test

* add nanite torpedo pylon and reporting of unknown/unmappable modules

* add nanite torpedo pylons

* restore ReportService

* add log rotation and backup folder

* add ship to blueprint
bugfixes for recipes

* prevent backup settings delete from deleting all backups

* rename tabs
drag and drop include old modules
hull boost calculation fixes
legacy module fixes/persistence
fix drag drop stuttering

* split code for settings blocks
add legacy modules support
add hints for ship builder
renamed main tabs

* fix localization file

* pre eng module fixes

* fix sensor range unit

* fix duplicating effects when switching module